updated things in folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StopWatch</title>
-    <link rel="stylesheet" href="stopwatchcss.css">
+    <link rel="stylesheet" href="style/stopwatchcss.css">
   </head>
   <body>
     <h1 style="padding-top: 2em">
@@ -18,12 +18,12 @@
           <button onclick="start()" style="border: transparent">
             <img
               id="play"
-              src="play_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.png"
+              src="Image/play_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.png"
               style="border: transparent; height: 80px"
             />
             <img
               id="pause"
-              src="pause_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.png"
+              src="Image/pause_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.png"
               style="
                 display: none;
                 height: 80px;
@@ -32,7 +32,7 @@
           </button>
           <button onclick="restart()" style="border: transparent">
             <img
-              src="restart_alt_24dp_000000_FILL0_wght400_GRAD0_opsz24.png"
+              src="Image/restart_alt_24dp_000000_FILL0_wght400_GRAD0_opsz24.png"
               height="80px"
             />
           </button>
@@ -41,5 +41,5 @@
     </div>
 
   </body>
-  <script src="stopwatch.js"></script>
+  <script src="js/stopwatch.js"></script>
 </html>
